# FreeNoiseMap-FNM

./: .directory  .gitignore  .gitmodules  FreeNoiseMap.pro  FreeNoiseMap.pro.user.4.8-pre1  GEMINI.md  README.md  build_wasm_release.sh  deploy_demo.sh  dynamic_matrix.cpp  dynamic_matrix.h  fnm_3D_segment.cpp  fnm_3D_segment.h  fnm_abstract_polyline_graphics_Item.cpp  fnm_abstract_polyline_graphics_Item.h  fnm_acoustic_barrier_segment.h  fnm_core_grid_settings.cpp  fnm_core_line_source_segment.h  fnm_core_noise_engine.cpp  fnm_core_noise_engine.h  fnm_core_point_source.h  fnm_core_single_receiver.h  fnm_core_types_namespace.h  fnm_line_segment_source.h  fnm_multiLine_graphics_Item.cpp  fnm_multiLine_graphics_Item.h  fnm_types.h  fnm_ui_main_window.cpp  fnm_ui_main_window.h  fnm_ui_qgraphics_item_abstract_point.cpp  fnm_ui_qgraphics_item_abstract_point.h  fnm_ui_qgraphics_item_abstract_polyline.cpp  fnm_ui_qgraphics_item_barrier.h  fnm_ui_qgraphics_item_point_source.cpp  fnm_ui_qgraphics_item_point_source.h  fnm_ui_qgraphics_item_raster_pixmap_area.cpp  fnm_ui_qgraphics_item_shaded_line.h  fnm_ui_qgraphics_view.h  fnm_ui_receivers_grid.cpp  fnm_ui_receivers_grid.h  (+65 more)
WebAssembly-build/: FreeNoiseMap.html  FreeNoiseMap.js
code/: CMakeLists.txt  fnm_core_3D_segment.cpp  fnm_core_barrier_segment.h  fnm_core_gradient_color.cpp  fnm_core_grid_settings.h  fnm_core_noise_engine.cpp  fnm_ui_qgraphics_item_abstract_polyline.h  fnm_ui_qgraphics_item_barrier.cpp  fnm_ui_qgraphics_item_multiline_source.cpp  fnm_ui_qgraphics_item_point_receiver.h  fnm_ui_qgraphics_item_point_source.cpp  fnm_ui_qgraphics_item_polyline.cpp  fnm_ui_qgraphics_item_shaded_line.cpp  fnm_ui_qgraphics_view.cpp  mainwindow.ui
code/core/: 3D_segment.cpp  3D_segment.h  CMakeLists.txt  barrier_segment.cpp  barrier_segment.h  fnm_core_noise_engine.cpp  fnm_core_noise_engine.h  fnm_core_point.h  fnm_core_point_receiver.h  gradient_color.cpp  gradient_color.h  grid_settings.cpp  grid_settings.h  line_source_segment.cpp  line_source_segment.h  noise_engine.cpp  noise_engine.h  noise_grid.cpp  noise_grid.h  point.cpp  point.h  point_receiver.cpp  point_receiver.h  point_source.cpp  point_source.h  project_controller.cpp  project_controller.h  segment.cpp  segment.h  types_namespace.h
code/ui/: CMakeLists.txt  fnm_ui_main_window.cpp  fnm_ui_main_window.h  fnm_ui_qgraphics_item_multiline_source.h  fnm_ui_qgraphics_item_point_receiver.cpp  fnm_ui_qgraphics_item_point_source.h  fnm_ui_qgraphics_item_polyline.h  fnm_ui_qgraphics_item_simple_text.cpp  fnm_ui_receivers_grid.h  fnm_view.cpp  fnm_view.h  main.cpp  main_window.cpp  main_window.h  mainwindow.ui  qgraphics_item_abstract_point.cpp  qgraphics_item_barrier.cpp  qgraphics_item_barrier.h  qgraphics_item_multiline_source.cpp  qgraphics_item_point_source.cpp  qgraphics_item_point_source.h  qgraphics_item_raster_pixmap_area.h  qgraphics_item_shaded_line.cpp  qgraphics_view.cpp  qgraphics_view.h  receivers_grid.cpp  receivers_grid.h  resources.qrc  splash_screen.html  wasm_shell.html
code/ui/qgraphics_items/: abstract_point.cpp  abstract_point.h  abstract_point_item.cpp  abstract_point_item.h  abstract_polyline.cpp  abstract_polyline.h  abstract_polyline_item.cpp  abstract_polyline_item.h  barrier.cpp  barrier.h  barrier_item.cpp  barrier_item.h  multiline_source.cpp  multiline_source.h  multiline_source_item.cpp  multiline_source_item.h  point_receiver.cpp  point_receiver.h  point_receiver_item.cpp  point_receiver_item.h  point_source.cpp  point_source.h  point_source_item.cpp  point_source_item.h  polyline.cpp  polyline.h  polyline_item.cpp  polyline_item.h  qgraphics_item_abstract_polyline.cpp  qgraphics_item_multiline_source.h  qgraphics_item_point_receiver.cpp  qgraphics_item_point_receiver.h  qgraphics_item_polyline.cpp  qgraphics_item_polyline.h  qgraphics_item_raster_pixmap_area.cpp  qgraphics_item_simple_text.cpp  raster_pixmap_area.cpp  raster_pixmap_area.h  raster_pixmap_area_item.cpp  raster_pixmap_area_item.h  (+8 more)
